diesel_compile_tests/tests/fail/join_with_explicit_on_requires_valid_boolean_expression.stderr
error[E0271]: type mismatch resolving `<diesel::query_source::joins::Join<users::table, posts::table, diesel::query_source::joins::Inner> as diesel::query_source::AppearsInFromClause<comments::table>>::Count == diesel::query_source::Once`
  --> $DIR/join_with_explicit_on_requires_valid_boolean_expression.rs:31:26
   |
31 |     let _ = users::table.inner_join(posts::table.on(users::id.eq(comments::id)));
   |                          ^^^^^^^^^^ expected struct `diesel::query_source::Never`, found struct `diesel::query_source::Once`
   |
   = note: required because of the requirements on the impl of `diesel::AppearsOnTable<diesel::query_source::joins::Join<users::table, posts::table, diesel::query_source::joins::Inner>>` for `comments::columns::id`
   = note: required because of the requirements on the impl of `diesel::AppearsOnTable<diesel::query_source::joins::Join<users::table, posts::table, diesel::query_source::joins::Inner>>` for `diesel::expression::operators::Eq<users::columns::id, comments::columns::id>`
   = note: required because of the requirements on the impl of `diesel::AppearsOnTable<diesel::query_source::joins::Join<users::table, posts::table, diesel::query_source::joins::Inner>>` for `diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<users::columns::id, comments::columns::id>>`
   = note: required because of the requirements on the impl of `diesel::QuerySource` for `diesel::query_source::joins::JoinOn<diesel::query_source::joins::Join<users::table, posts::table, diesel::query_source::joins::Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<users::columns::id, comments::columns::id>>>`
   = note: required because of the requirements on the impl of `diesel::query_builder::Query` for `diesel::query_builder::SelectStatement<diesel::query_source::joins::JoinOn<diesel::query_source::joins::Join<users::table, posts::table, diesel::query_source::joins::Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<users::columns::id, comments::columns::id>>>>`
   = note: required because of the requirements on the impl of `diesel::query_builder::AsQuery` for `diesel::query_builder::SelectStatement<diesel::query_source::joins::JoinOn<diesel::query_source::joins::Join<users::table, posts::table, diesel::query_source::joins::Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<users::columns::id, comments::columns::id>>>>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::InternalJoinDsl<posts::table, diesel::query_source::joins::Inner, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<users::columns::id, comments::columns::id>>>` for `diesel::query_builder::SelectStatement<users::table>`

error[E0277]: the trait bound `diesel::sql_types::Integer: diesel::sql_types::BoolOrNullableBool` is not satisfied
  --> $DIR/join_with_explicit_on_requires_valid_boolean_expression.rs:33:26
   |
33 |     let _ = users::table.inner_join(posts::table.on(users::id));
   |                          ^^^^^^^^^^ the trait `diesel::sql_types::BoolOrNullableBool` is not implemented for `diesel::sql_types::Integer`
   |
   = note: required because of the requirements on the impl of `diesel::QuerySource` for `diesel::query_source::joins::JoinOn<diesel::query_source::joins::Join<users::table, posts::table, diesel::query_source::joins::Inner>, users::columns::id>`
   = note: required because of the requirements on the impl of `diesel::query_builder::Query` for `diesel::query_builder::SelectStatement<diesel::query_source::joins::JoinOn<diesel::query_source::joins::Join<users::table, posts::table, diesel::query_source::joins::Inner>, users::columns::id>>`
   = note: required because of the requirements on the impl of `diesel::query_builder::AsQuery` for `diesel::query_builder::SelectStatement<diesel::query_source::joins::JoinOn<diesel::query_source::joins::Join<users::table, posts::table, diesel::query_source::joins::Inner>, users::columns::id>>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::InternalJoinDsl<posts::table, diesel::query_source::joins::Inner, users::columns::id>` for `diesel::query_builder::SelectStatement<users::table>`
